force-app/main/default/objects/PDLM__Change_Phase__c/PDLM__Change_Phase__c.object-meta.xml
<CustomObject>
    <description>track approvals per Phase under a Change</description>
    <label>Change Phase</label>
    <nameField>
        <label>Change Phase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Phases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>