force-app/main/default/objects/PDLM__Change_Phase__c/fields/PDLM__Approver_12__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Approver_12__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 12</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Change Phases (Approver 12)</relationshipLabel>
    <relationshipName>Change_Phases12</relationshipName>
    <type>Lookup</type>
</CustomField>