force-app/main/default/objects/PDLM__Change_Phase__c/fields/PDLM__Completed__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates that this phase is approved or completed</description>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>