force-app/main/default/objects/PDLM__Change_Phase__c/fields/PDLM__In_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>PDLM__In_Approval_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this change phase is currently inside an approval process and therefor must be locked</description>
    <label>In Approval Process</label>
    <type>Checkbox</type>
</CustomField>