force-app/main/default/objects/PDLM__Change_Phase__c/fields/PDLM__ORG_URL__c.field-meta.xml
<CustomField>
    <fullName>PDLM__ORG_URL__c</fullName>
    <description>This field gives the ORG URL which can be used inside an email template</description>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ORG URL</label>
    <type>Text</type>
</CustomField>